--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 <body>
 
   <header>
-    <nav>
-      <h1><a aria-label="Home" tabindex="1" href="/">Restaurant Reviews</a></h1>
+    <nav role="navigation">
+      <h1><a role="banner" aria-label="Home" tabindex="1" href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
   <main id="maincontent">
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container" role="application">
+      <div id="map" aria-label="Map of Restaurants" role="goemap"></div>
     </section>
     <section>
       <div class="filter-options">
